--- a/launcher/index.html
+++ b/launcher/index.html
@@ -623,8 +623,8 @@
             while(1){
                 await get_log('metric', 'diag_metric');
                 await get_log('bootstrap', 'diag_bootstrap');
-                // await get_log('basalt', 'diag_basalt');
-                await sleep(5000);
+                await get_log('basalt', 'diag_basalt');
+                await sleep(1000);
             }
         }
 
