--- a/launcher/index.html
+++ b/launcher/index.html
@@ -210,6 +210,9 @@
                                 </tr>
                             </table>
                         </div>
+                        <p style="font-size:smaller;">
+                            * An additional honest node is always executed in the main machine for diagnostic purposes.
+                        </p>
                     </div>
 
                     <div class="params_section">
