stderr client ok

--- a/launcher/index.html
+++ b/launcher/index.html
@@ -31,7 +31,7 @@
         }
         div.diag_section{
             margin: 30px;
-            width: 600px;
+            width: 300px;
         }
 
         fieldset.diag{
@@ -143,7 +143,7 @@
 
     <main id="main_page">
 
-        <table style="width: 1600px; margin: auto;">
+        <table style="width: 1900px; margin: auto;">
             <tr>
                 <td style="width : 300px; vertical-align:top;">
                     <div class="right_bar">
@@ -286,6 +286,27 @@
                         <fieldset class="diag">
                             <legend>Basalt</legend>
                             <div class='diag' id='diag_basalt' style="height: 150px;"></div>
+                        </fieldset>
+                    </div>
+                </td>
+                <td style="width : 400px; vertical-align:top;">
+                    <div class="diag_section">
+                        <!-- <h3>Diagnostic</h3> -->
+                        <fieldset class="diag">
+                            <legend>Inventory err</legend>
+                            <div class='diag' id='diag_inventory_err' style="height: 100px;"></div>
+                        </fieldset>
+                        <fieldset class="diag">
+                            <legend>Bootstrap err</legend>
+                            <div class='diag' id='diag_bootstrap_err' style="height: 200px;"></div>
+                        </fieldset>
+                        <fieldset class="diag">
+                            <legend>Metric err</legend>
+                            <div class='diag' id='diag_metric_err' style="height: 150px;"></div>
+                        </fieldset>
+                        <fieldset class="diag">
+                            <legend>Basalt err</legend>
+                            <div class='diag' id='diag_basalt_err' style="height: 150px;"></div>
                         </fieldset>
                     </div>
                 </td>
