stderr req log files ok

--- a/launcher/index.html
+++ b/launcher/index.html
@@ -648,6 +648,9 @@
                 await get_log('metric', 'diag_metric');
                 await get_log('bootstrap', 'diag_bootstrap');
                 await get_log('basalt', 'diag_basalt');
+                await get_log('metric_err', 'diag_metric_err');
+                await get_log('bootstrap_err', 'diag_bootstrap_err');
+                await get_log('basalt_err', 'diag_basalt_err');
                 await sleep(1000);
             }
         }
