css : adding pointer

--- a/launcher/index.html
+++ b/launcher/index.html
@@ -43,6 +43,7 @@
         }
 
         div.button{
+            cursor: pointer;
             border-style: solid;
             border-radius: 10px;
             border-width: 1px;
